--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlin_version = '1.8.20-RC'
+        kotlin_version = '1.8.20-RC2'
     }
     dependencies {
         classpath 'com.google.gms:google-services:4.3.15'
@@ -14,4 +14,6 @@ plugins {
     id 'com.android.library' version '7.4.2' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.20-RC' apply false
     id 'com.google.dagger.hilt.android' version '2.45' apply false
+    id 'org.jetbrains.kotlin.jvm' version '1.8.10' apply false
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.8.10' apply false
 }
