--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1'
     implementation 'androidx.fragment:fragment-ktx:1.5.6'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
 
 kapt {
