--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
             android:parentActivityName=".app.modules.main.MainActivity" />
         <activity
             android:name=".app.modules.auth.RegisterActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:parentActivityName=".app.modules.auth.LoginActivity"/>
         <activity
             android:name=".app.modules.auth.LoginActivity"
             android:exported="false" />
