Implemented password update feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,13 +20,17 @@
         android:theme="@style/Theme.TodoList"
         tools:targetApi="31">
         <activity
+            android:name=".app.modules.profile.UpdatePasswordActivity"
+            android:exported="false"
+            android:parentActivityName=".app.modules.main.MainActivity"/>
+        <activity
             android:name=".app.modules.main.SingleTaskActivity"
             android:exported="false"
             android:parentActivityName=".app.modules.main.MainActivity" />
         <activity
             android:name=".app.modules.auth.RegisterActivity"
             android:exported="false"
-            android:parentActivityName=".app.modules.auth.LoginActivity"/>
+            android:parentActivityName=".app.modules.auth.LoginActivity" />
         <activity
             android:name=".app.modules.auth.LoginActivity"
             android:exported="false" />
